# SQLogger

./: CMakeLists.txt  README.md
include/: sqlogger.h
src/: example1.cpp  sqlogger.cpp
tests/: CMakeLists.txt  test1.cpp
